# openapi.yaml
@@ -18,6 +18,45 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Cluster'
+        "403":
+          description: "unauthorized operation"
+          content:
+            "application/json":
+              schema:
+                allOf:
+                  - "$ref": "#/components/schemas/ErrorModel"
+        "401":
+          description: "unauthenticated operation"
+          content:
+            "application/json":
+              schema:
+                allOf:
+                  - "$ref": "#/components/schemas/ErrorModel"
+          headers:
+            X-Rate-Limit-Limit:
+              "$ref": "#/components/headers/X-Rate-Limit-Limit"
+            X-Rate-Limit-Remaining:
+              "$ref": "#/components/headers/X-Rate-Limit-Remaining"
+            X-Rate-Limit-Reset:
+              "$ref": "#/components/headers/X-Rate-Limit-Reset"
+            X-Requset-ID:
+              "$ref": "#/components/headers/X-Requset-ID"
+        "400":
+          description: "bad request"
+          content:
+            "application/json":
+              schema:
+                allOf:
+                  - "$ref": "#/components/schemas/ErrorModel"
+          headers:
+            X-Rate-Limit-Limit:
+              "$ref": "#/components/headers/X-Rate-Limit-Limit"
+            X-Rate-Limit-Remaining:
+              "$ref": "#/components/headers/X-Rate-Limit-Remaining"
+            X-Rate-Limit-Reset:
+              "$ref": "#/components/headers/X-Rate-Limit-Reset"
+            X-Requset-ID:
+              "$ref": "#/components/headers/X-Requset-ID"
   /clusters/{id}:
     get:
       summary: Get a cluster by ID
@@ -34,6 +73,45 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Cluster'
+        "403":
+          description: "unauthorized operation"
+          content:
+            "application/json":
+              schema:
+                allOf:
+                  - "$ref": "#/components/schemas/ErrorModel"
+        "401":
+          description: "unauthenticated operation"
+          content:
+            "application/json":
+              schema:
+                allOf:
+                  - "$ref": "#/components/schemas/ErrorModel"
+          headers:
+            X-Rate-Limit-Limit:
+              "$ref": "#/components/headers/X-Rate-Limit-Limit"
+            X-Rate-Limit-Remaining:
+              "$ref": "#/components/headers/X-Rate-Limit-Remaining"
+            X-Rate-Limit-Reset:
+              "$ref": "#/components/headers/X-Rate-Limit-Reset"
+            X-Requset-ID:
+              "$ref": "#/components/headers/X-Requset-ID"
+        "400":
+          description: "bad request"
+          content:
+            "application/json":
+              schema:
+                allOf:
+                  - "$ref": "#/components/schemas/ErrorModel"
+          headers:
+            X-Rate-Limit-Limit:
+              "$ref": "#/components/headers/X-Rate-Limit-Limit"
+            X-Rate-Limit-Remaining:
+              "$ref": "#/components/headers/X-Rate-Limit-Remaining"
+            X-Rate-Limit-Reset:
+              "$ref": "#/components/headers/X-Rate-Limit-Reset"
+            X-Requset-ID:
+              "$ref": "#/components/headers/X-Requset-ID"
 components:
   schemas:
     Cluster:
@@ -43,4 +121,49 @@ components:
           type: integer
         name:
           type: string
-
+    ErrorModel:
+      title: ErrorModel
+      required:
+        - errorDetails
+        - errorCode
+        - message
+        - debugId
+        - httpStatusCode
+      type: object
+      properties:
+        errorDetails:
+          title: Error Details
+          type: object
+        errorCode:
+          title: Error Code
+          type: string
+        message:
+          title: Message
+          type: string
+        debugId:
+          title: Debug ID
+          type: string
+        httpStatusCode:
+          title: HttpStatus Code
+          type: integer
+  headers:
+    X-Rate-Limit-Limit:
+      description: "The number of allowed requests in the current period"
+      schema:
+        type: "integer"
+    X-Rate-Limit-Remaining:
+      description: "The number of remaining requests in the current period"
+      schema:
+        type: "integer"
+    X-Rate-Limit-Reset:
+      description: "The number of seconds left in the current period"
+      schema:
+        type: "integer"
+    Retry-After:
+      description: "The number of seconds to wait before retrying"
+      schema:
+        type: "integer"
+    X-Requset-ID:
+      description: "The request id used to track the operation"
+      schema:
+        type: "string"
